# bumpbox

./: AGENTS.md  Cargo.toml  MASTER_SPEC.md  Makefile  README.md
codex/: 00-OVERNIGHT-RUNBOOK.md  taskboard.yaml
codex/prompts/: 00-LAUNCH-THIS-REPO.md  01-REPO-AND-TOOLING.md  02-CONTRACTS-AND-SCHEMAS.md  03-CORE-DOMAIN.md  04-APIS-OR-PLUGIN-LAYER.md  05-TESTS-AND-VALIDATION.md  06-CI-LINT-AND-RELEASE.md  07-DOCS-FINAL-AUDIT.md
contracts/: grid-config.schema.json  query-cases.schema.json
crates/bumpbox-core/: Cargo.toml
crates/bumpbox-core/examples/: queries.rs
crates/bumpbox-core/src/: lib.rs  queries.rs  queries3d.rs  scalar.rs  shapes.rs  shapes3d.rs  vec2.rs  vec3.rs
crates/bumpbox-core/tests/: smoke.rs
crates/bumpbox-grid/: Cargo.toml
crates/bumpbox-grid/src/: lib.rs
crates/bumpbox-grid/tests/: grid_smoke.rs
demo-wasm/: Cargo.toml  LICENSE  README.md
demo-wasm/src/: lib.rs
demo-wasm/www/: index.html  main.js  styles.css
docs/: 01-PRD.md  02-TECHNICAL-ARCHITECTURE.md  03-WBS-AND-MILESTONES.md  04-TDD-QUALITY-GATES.md  05-ACCEPTANCE-TEST-MATRIX.md  06-RISK-REGISTER.md  07-REPO-BLUEPRINT.md
fixtures/contracts/: grid-config.invalid.json  grid-config.valid.json  query-cases.invalid.json  query-cases.valid.json
scripts/: validate_contract_fixtures.py
