[package]
name = "bumpbox-demo-wasm"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
description = "Browser showcase for bumpbox 2D and 3D query scenes"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bumpbox-core = { path = "../crates/bumpbox-core" }
bumpbox-grid = { path = "../crates/bumpbox-grid" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
